<resources>
    <string name="app_name">Film Friend</string>
    <string name="title_history">History</string>
    <string name="title_match">Match</string>
    <string name="title_discover">Discover</string>
    <string name="tmdb_api_key">25ace50f784640868b88295ea133e67e</string>
    <string name="tmdb_api_base_url">https://api.themoviedb.org/3</string>
    <string name="tmdb_image_base_url">https://image.tmdb.org/t/p/</string>
    <string name="tmdb_poster_size_0">w92</string>
    <string name="tmdb_poster_size_1">w154</string>
    <string name="tmdb_poster_size_2">w185</string>
    <string name="tmdb_poster_size_3">w342</string>
    <string name="tmdb_poster_size_4">w500</string>
    <string name="tmdb_poster_size_5">w780</string>
    <string name="tmdb_poster_size_6">original</string>
    <string name="tmdb_backdrop_size_0">w300</string>
    <string name="tmdb_backdrop_size_1">w780</string>
    <string name="tmdb_backdrop_size_2">w1280</string>
    <string name="tmdb_backdrop_size_3">original</string>
    <string name="title_activity_saved_preferences">SavedPreferences</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_movie_info">MovieInfoActivity</string>
    <string name="movie_info_activity_label">A Random Movie Just For You!</string>
    <string name="find_new_movie">Find New Movie</string>
    <string name="watch_this_movie">Add to Watchlist</string>
    <string name="remove_from_watchlist">Remove From Watchlist</string>

    <string name="large_text">
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings_about_body">FilmFriend is an application that recommends you movies based on your preferences. This app chooses an ideal movie for you and your friends. That way, you won\'t have to spend hours searching for a movie that everyone can enjoy! Additionally, this app encourages community engagement, and allows you to view popular movies in your area from the comfort of your smart phone!</string>
    <string name="settings_credits_body">App Creators:\nBrandon Poirier\nScott Hill\nAl Allums\n\nCredits To:\nTMDB \nJackson Project \nMPAndroidChart by Philipp Jahoda \nCode Scanner by Yuriy Budiyev \nZXing </string>
    <string name="average_rating">Average Rating:</string>
    <string name="_0">0</string>
    <string name="viewed_movies_by_decade">Viewed Movies By Decade:</string>
    <string name="total_movies">Total Movies:</string>
    <string name="waiting_for_qr_code">Waiting for QR code…</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_year">Release year</string>
    <string name="rating_label">Rating:</string>
    <string name="rating">5/5</string>
    <string name="votes_label">Votes:</string>
    <string name="vote_count">123</string>
    <string name="scan_qr">Scan QR</string>
    <string name="generate_qr">Generate QR</string>
    <string name="match_preferences_name">Match Preferences Name:</string>
    <string name="save_match_preferences">Save Match Preferences</string>
    <string name="edit">Edit</string>
    <string name="send_to_match_page">Send To Match Page</string>
    <string name="heading">Heading</string>
    <string name="body">Body</string>
    <string name="release_years_label">Release Years</string>
    <string name="chosen_genres">Chosen Genres:</string>
    <string name="genres_not_wanted">Genres Not Wanted:</string>
    <string name="ratings_range">Ratings Range:</string>
    <string name="chosen_watch_providers">Chosen Watch Provider:</string>
    <string name="runtime_range_in_minutes">Runtime Range (in minutes):</string>
    <string name="vote_count_range">Vote Count Range:</string>
    <string name="chosen_language">Chosen Language:</string>
    <string name="find_movies_within">Find movies within:</string>
    <string name="kilometers">Kilometers</string>
    <string name="filter_by">Filter by</string>
    <string name="settings">Settings</string>
    <string name="example_language">Example Language</string>
    <string name="movie_name">Movie Name</string>
    <string name="release">Release</string>
    <string name="preference_name">Preference Name</string>
    <string name="release_year_label">Release Year:</string>
    <string name="genres_i_want_to_see">Genre(s) I Want To See:</string>
    <string name="genres_i_dont_want_to_see">Genre(s) I DON\'T Want To See:</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="watch_providers">Watch Providers:</string>
    <string name="netflix">Netflix</string>
    <string name="hulu">Hulu</string>
    <string name="disney">Disney+</string>
    <string name="prime_video">Prime Video</string>
    <string name="google_play">Google Play</string>
    <string name="runtime_mins">Runtime (mins):</string>
    <string name="vote_count_label_2">Vote Count:</string>
    <string name="language_label">Language:</string>
    <string name="empty_string" />
    <string name="confirm_delete_mp">Yes DELETE</string>
    <string name="delete_mp_title">Delete Movie Match Preferences</string>
    <string name="deny_delete_mp">No</string>
    <string name="preferences_delete_toast">Match Preferences Deleted!</string>
</resources>