<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.save_match_preferences.SaveMatchPreferencesActivity">

    <TextView
        android:id="@+id/match_preferences_title_txt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/match_preferences_name"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

    <include
        layout="@layout/display_match_preferences"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="32" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="6">

        <Button
            android:id="@+id/btnSendBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/send_to_match_page" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/edit" />

    </LinearLayout>

</LinearLayout>