<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        style="@style/linearLayoutVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_release_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_view_margins">

            <LinearLayout
                android:id="@+id/release_years_layout"
                style="@style/linearLayoutHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_view_padding">

                <TextView
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="@string/release_years_label" />

                <TextView
                    android:id="@+id/txtViewReleaseYearStart"
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:text="1950"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.SpinnerItem" />

                <TextView
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="-" />

                <TextView
                    android:id="@+id/txtViewReleaseYearEnd"
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:gravity="start"
                    android:text="2021"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.SpinnerItem" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_included_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_view_margins">

            <LinearLayout
                style="@style/linearLayoutVertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_view_padding"
                android:paddingBottom="@dimen/default_view_padding">

                <LinearLayout
                    style="@style/linearLayoutHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_view_padding">

                    <TextView
                        style="@style/textviewVerticallyCentered"
                        android:layout_width="0dp"
                        android:layout_weight="11"
                        android:text="@string/chosen_genres" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/default_view_padding"
                    android:paddingEnd="@dimen/default_view_padding"
                    android:paddingBottom="@dimen/default_view_padding">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/chosen_genres_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_view_margins"
                        android:layout_marginEnd="@dimen/default_view_margins"
                        android:layout_marginBottom="@dimen/default_view_margins"
                        android:nestedScrollingEnabled="false" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_excluded_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_view_margins">

            <LinearLayout
                style="@style/linearLayoutVertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_view_padding"
                android:paddingBottom="@dimen/default_view_padding">

                <LinearLayout
                    style="@style/linearLayoutHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_view_padding">

                    <TextView
                        style="@style/textviewVerticallyCentered"
                        android:layout_width="0dp"
                        android:layout_weight="11"
                        android:text="@string/genres_not_wanted" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/default_view_padding"
                    android:paddingEnd="@dimen/default_view_padding"
                    android:paddingBottom="@dimen/default_view_padding">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rejected_genres_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_view_margins"
                        android:layout_marginEnd="@dimen/default_view_margins"
                        android:layout_marginBottom="@dimen/default_view_margins"
                        android:nestedScrollingEnabled="false" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_ratings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_view_margins">

            <LinearLayout
                android:id="@+id/rating_range_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_view_padding">

                <TextView
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="@string/ratings_range" />

                <TextView
                    android:id="@+id/txtViewRatingLowerBound"
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:text="4"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.SpinnerItem" />

                <TextView
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="-" />

                <TextView
                    android:id="@+id/txtViewRatingUpperBound"
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:gravity="start"
                    android:text="9"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.SpinnerItem" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_chosen_watch_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_view_margins">

            <LinearLayout
                android:id="@+id/chosen_watch_provider_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_view_padding">

                <TextView
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="@string/chosen_watch_providers" />

                <TextView
                    android:id="@+id/txtViewChosenWatchProvider"
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="-----"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.SpinnerItem" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_runtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_view_margins">

            <LinearLayout
                android:id="@+id/runtime_range_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_view_padding">

                <TextView
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="@string/runtime_range_in_minutes" />

                <TextView
                    android:id="@+id/txtViewRuntimeLowerBound"
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:text="4"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.SpinnerItem" />

                <TextView
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="-" />

                <TextView
                    android:id="@+id/txtViewRuntimeUpperBound"
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:gravity="start"
                    android:text="9"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.SpinnerItem" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_vote_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_view_margins">

            <LinearLayout
                android:id="@+id/vote_count_range_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_view_padding">

                <TextView
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="@string/vote_count_range" />

                <TextView
                    android:id="@+id/txtViewVoteCountLowerBound"
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:text="4"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.SpinnerItem" />

                <TextView
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="-" />

                <TextView
                    android:id="@+id/txtViewVoteCountUpperBound"
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:gravity="start"
                    android:text="9"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.SpinnerItem" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_chosen_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_view_margins">

            <LinearLayout
                android:id="@+id/chosen_language_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_view_padding">

                <TextView
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="@string/chosen_language" />

                <TextView
                    android:id="@+id/txtViewChosenLanguage"
                    style="@style/textviewVerticallyCentered"
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="4"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.SpinnerItem" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>